@@ -110,3 +110,45 @@ Test forward projection on ellipsoid
 Test inverse projection on ellipsoid
 0 0.7853981633974483	0.00000	41.93785 0.00000
 -1.5707963267948966 0	-90.00000	0.00000 0.00000
+##############################################################
+Test geos projection
+Test geos on a sphere
+16d11'8" 58d35'31"	849736.77	4960015.43 0.00
+-43d11'47" -22d54'30"	-3780930.93	-2326595.36 0.00
+18d25'26" -33d55'31"	1608689.65	-3412115.56 0.00
+47d58'42" 29d22'11"	3825202.59	2885980.79 0.00
+Test geos on a ellipsoid
+16d11'8" 58d35'31"	852862.53	4945122.70 0.00
+-43d11'47" -22d54'30"	-3787026.57	-2314765.32 0.00
+18d25'26" -33d55'31"	1612331.00	-3397031.37 0.00
+47d58'42" 29d22'11"	3832522.65	2872185.29 0.00
+Test inv geos on a sphere
+849736.77 4960015.43	16d11'8"E	58d35'31"N 0.000
+-3780930.93 -2326595.36	43d11'47"W	22d54'30"S 0.000
+1608689.65 -3412115.56	18d25'26"E	33d55'31"S 0.000
+3825202.59 2885980.79	47d58'42"E	29d22'11"N 0.000
+Test inv geos on a ellipsoid
+852862.53 4945122.70	16d11'8"E	58d35'31"N 0.000
+-3787026.57 -2314765.32	43d11'47"W	22d54'30"S 0.000
+1612331.00 -3397031.37	18d25'26"E	33d55'31"S 0.000
+3832522.65 2872185.29	47d58'42"E	29d22'11"N 0.000
+Test geos on a sphere with alternate sweep
+16d11'8" 58d35'31"	841586.28	4961396.21 0.00
+-43d11'47" -22d54'30"	-3772913.22	-2339604.71 0.00
+18d25'26" -33d55'31"	1601377.77	-3415545.15 0.00
+47d58'42" 29d22'11"	3812722.89	2902474.62 0.00
+Test geos on a ellipsoid with alternate sweep
+16d11'8" 58d35'31"	844731.03	4946509.59 0.00
+-43d11'47" -22d54'30"	-3779077.27	-2327750.87 0.00
+18d25'26" -33d55'31"	1605067.15	-3400461.47 0.00
+47d58'42" 29d22'11"	3820138.08	2888664.15 0.00
+Test inv geos on a sphere with alternate sweep
+841586.28 4961396.21	16d11'8"E	58d35'31"N 0.000
+-3772913.22 -2339604.71	43d11'47"W	22d54'30"S 0.000
+1601377.77 -3415545.15	18d25'26"E	33d55'31"S 0.000
+3812722.89 2902474.62	47d58'42"E	29d22'11"N 0.000
+Test inv geos on a ellipsoid with alternate sweep
+844731.03 4946509.59	16d11'8"E	58d35'31"N 0.000
+-3779077.27 -2327750.87	43d11'47"W	22d54'30"S 0.000
+1605067.15 -3400461.47	18d25'26"E	33d55'31"S 0.000
+3820138.08 2888664.15	47d58'42"E	29d22'11"N 0.000
